# pydantic-gerrit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  copilot.md  dev-notes.md  docker-compose.yaml  foo.py  generate_typeddicts.py  prompts.md  pydantic_gerrit.latest.changes.json  pyproject.toml  roadmap.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
schemas/v3_12/: access.json  accounts.json  branches.json  changes.json  commits.json  config.json  files.json  git-person.json  groups.json  labels.json  projects.json  revisions.json  web-links.json
scripts/: __init__.py  generate.py
src/pydantic_gerrit/: base.py
src/pydantic_gerrit/latest/: accounts.py  changes.py  groups.py  projects.py
src/pydantic_gerrit/v3_12/: accounts.py  groups.py
tests/: README.md  __init__.py  base.py  conftest.py  helpers.py  test_accounts.py  test_groups.py
tests-old/: README.md  helpers.py  test_accounts.py  test_groups.py
tests-old/responses/: group-audit-event-info.json  groups-with-includes.json  groups-with-members.json
tests/data/v3_12/accounts/: basic.json  invalid_email.json  minimal.json  with_details.json
tests/data/v3_12/groups/: basic.json  invalid.json  minimal.json  with_details.json
tests/responses/: group-options.json  groups-with-includes.json  groups-with-members.json  groups.json
