[project]
name = "pydantic_gerrit"
version = "0.1.0"
description = "Pydantic data models for the Gerrit REST API"
license = "MIT"
authors = [{ name = "Aurelio Jargas", email = "verde@aurelio.net" }]
readme = "README.md"
urls.repository = "https://github.com/aureliojargas/pydantic-gerrit"

requires-python = ">=3.10"
dependencies = ["pydantic>=2.11.7"]

[dependency-groups]
dev = [
    "mypy==1.16.1",
    "pre-commit==4.2.0",
    "pre-commit-hooks==5.0.0",
    "ruff==0.12.0",
    "types-requests==2.32.4.20250611",
]
test = [
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "requests>=2.32.4",
]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

#-------------------------------------------------------------------------------

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
# https://docs.pydantic.dev/2.10/integrations/mypy/#configuring-the-plugin
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

#-------------------------------------------------------------------------------

[tool.ruff]
line-length = 120
format.quote-style = "single"

lint.select = ["ALL"]
lint.ignore = [
    "D",      # pydocstyle
    "FIX002", # Line contains TODO, consider resolving the issue
    "TD003",  # Missing issue link on the line following this TODO

    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM",    # flake8-commas
    "D206",   # indent-with-spaces
    "D300",   # triple-single-quotes
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "E501",   # Line too long
    "ISC",    # flake8-implicit-str-concat
    "Q",      # flake8-quotes
]
lint.per-file-ignores."tests/*" = [
    "INP001", # File is part of an implicit namespace package
    "S101",   # Use of `assert` detected
    "FBT001", # Boolean-typed positional argument in function definition
]
