[project]
name = "gerrit-schemas"
version = "0.1.0"
description = "JSON Schema definitions and generated Python models for the Gerrit REST API"
license = "MIT"
authors = [{ name = "Aurelio Jargas", email = "verde@aurelio.net" }]
readme = "README.md"
urls.repository = "https://github.com/aureliojargas/gerrit-schemas"

requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
    "typing-extensions>=4.8.0",  # For Python 3.10 compatibility
]

[dependency-groups]
dev = [
    "mypy==1.16.1",
    "pre-commit==4.2.0",
    "pre-commit-hooks==5.0.0",
    "ruff==0.12.0",
    "datamodel-code-generator[ruff]==0.33.0",  # For generating Python models
]
test = [
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

#-------------------------------------------------------------------------------

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
# https://docs.pydantic.dev/2.10/integrations/mypy/#configuring-the-plugin
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

#-------------------------------------------------------------------------------

[tool.ruff]
line-length = 120
format.quote-style = "single"

lint.select = ["ALL"]
lint.ignore = [
    "D",       # pydocstyle
    "FIX002",  # Line contains TODO, consider resolving the issue
    "TD003",   # Missing issue link on the line following this TODO

    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM",     # flake8-commas
    "D206",    # indent-with-spaces
    "D300",    # triple-single-quotes
    "E111",    # indentation-with-invalid-multiple
    "E114",    # indentation-with-invalid-multiple-comment
    "E117",    # over-indented
    "E501",    # Line too long
    "ISC",     # flake8-implicit-str-concat
    "Q",       # flake8-quotes
]
lint.per-file-ignores."tests/*" = [
    "INP001",  # File is part of an implicit namespace package
    "FBT001",  # Boolean-typed positional argument in function definition
    "PLR2004", # Magic value used in comparison, consider replacing `2` with a constant variable
    "S101",    # Use of `assert` detected
    "SLF001",  # Private member accessed: `_number`
]
